// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`emphasis bold should be deep tokenized 1`] = `
[
  {
    "indent": 0,
    "raw": "**bold with \`code\` and *italics* and ~~strikes~~ and [link](https://kiranparajuli.com.np)**",
    "tokens": [
      {
        "raw": "**bold with \`code\` and *italics* and ~~strikes~~ and [link](https://kiranparajuli.com.np)**",
        "tokens": [
          {
            "raw": "bold with ",
            "type": "text",
            "value": "bold with ",
          },
          {
            "raw": "\`code\`",
            "type": "code",
            "value": "code",
          },
          {
            "raw": " and ",
            "type": "text",
            "value": " and ",
          },
          {
            "raw": "*italics*",
            "tokens": [
              {
                "raw": "italics",
                "type": "text",
                "value": "italics",
              },
            ],
            "type": "italic",
          },
          {
            "raw": " and ",
            "type": "text",
            "value": " and ",
          },
          {
            "raw": "~~strikes~~",
            "tokens": [
              {
                "raw": "strikes",
                "type": "text",
                "value": "strikes",
              },
            ],
            "type": "strike-through",
          },
          {
            "raw": " and ",
            "type": "text",
            "value": " and ",
          },
          {
            "raw": "[link](https://kiranparajuli.com.np)",
            "tokens": {
              "href": "https://kiranparajuli.com.np",
              "title": {
                "raw": "link",
                "tokens": [
                  {
                    "raw": "link",
                    "type": "text",
                    "value": "link",
                  },
                ],
              },
              "tooltip": undefined,
            },
            "type": "link",
          },
        ],
        "type": "bold",
      },
    ],
    "type": "paragraph",
    "value": "**bold with \`code\` and *italics* and ~~strikes~~ and [link](https://kiranparajuli.com.np)**",
  },
]
`;

exports[`emphasis bold should match the consecutive occurrences 1`] = `
[
  {
    "indent": 0,
    "raw": "**first bold** **second bold** **third bold**",
    "tokens": [
      {
        "raw": "**first bold**",
        "tokens": [
          {
            "raw": "first bold",
            "type": "text",
            "value": "first bold",
          },
        ],
        "type": "bold",
      },
      {
        "raw": " ",
        "type": "text",
        "value": " ",
      },
      {
        "raw": "**second bold**",
        "tokens": [
          {
            "raw": "second bold",
            "type": "text",
            "value": "second bold",
          },
        ],
        "type": "bold",
      },
      {
        "raw": " ",
        "type": "text",
        "value": " ",
      },
      {
        "raw": "**third bold**",
        "tokens": [
          {
            "raw": "third bold",
            "type": "text",
            "value": "third bold",
          },
        ],
        "type": "bold",
      },
    ],
    "type": "paragraph",
    "value": "**first bold** **second bold** **third bold**",
  },
]
`;

exports[`emphasis code should match the consecutive occurrences 1`] = `
[
  {
    "indent": 0,
    "raw": "\`first code\` \`second code\` \`third code\`",
    "tokens": [
      {
        "raw": "\`first code\`",
        "type": "code",
        "value": "first code",
      },
      {
        "raw": " ",
        "type": "text",
        "value": " ",
      },
      {
        "raw": "\`second code\`",
        "type": "code",
        "value": "second code",
      },
      {
        "raw": " ",
        "type": "text",
        "value": " ",
      },
      {
        "raw": "\`third code\`",
        "type": "code",
        "value": "third code",
      },
    ],
    "type": "paragraph",
    "value": "\`first code\` \`second code\` \`third code\`",
  },
]
`;

exports[`emphasis code should not be deep tokenized 1`] = `
[
  {
    "indent": 0,
    "raw": "\`code with ~ gem and **bold** and *italics* and [link](https://kiranparajuli.com.np)\`",
    "tokens": [
      {
        "raw": "\`code with ~ gem and **bold** and *italics* and [link](https://kiranparajuli.com.np)\`",
        "type": "code",
        "value": "code with ~ gem and **bold** and *italics* and [link](https://kiranparajuli.com.np)",
      },
    ],
    "type": "paragraph",
    "value": "\`code with ~ gem and **bold** and *italics* and [link](https://kiranparajuli.com.np)\`",
  },
]
`;

exports[`emphasis italics should be deep tokenized 1`] = `
[
  {
    "indent": 0,
    "raw": "*italics with \`code\` and ~~strikes~~ and [link](https://kiranparajuli.com.np)*",
    "tokens": [
      {
        "raw": "*italics with \`code\` and ~~strikes~~ and [link](https://kiranparajuli.com.np)*",
        "tokens": [
          {
            "raw": "italics with ",
            "type": "text",
            "value": "italics with ",
          },
          {
            "raw": "\`code\`",
            "type": "code",
            "value": "code",
          },
          {
            "raw": " and ",
            "type": "text",
            "value": " and ",
          },
          {
            "raw": "~~strikes~~",
            "tokens": [
              {
                "raw": "strikes",
                "type": "text",
                "value": "strikes",
              },
            ],
            "type": "strike-through",
          },
          {
            "raw": " and ",
            "type": "text",
            "value": " and ",
          },
          {
            "raw": "[link](https://kiranparajuli.com.np)",
            "tokens": {
              "href": "https://kiranparajuli.com.np",
              "title": {
                "raw": "link",
                "tokens": [
                  {
                    "raw": "link",
                    "type": "text",
                    "value": "link",
                  },
                ],
              },
              "tooltip": undefined,
            },
            "type": "link",
          },
        ],
        "type": "italic",
      },
    ],
    "type": "paragraph",
    "value": "*italics with \`code\` and ~~strikes~~ and [link](https://kiranparajuli.com.np)*",
  },
]
`;

exports[`emphasis italics should match the consecutive occurrences 1`] = `
[
  {
    "indent": 0,
    "raw": "*first italics* *second italics* *third italics*",
    "tokens": [
      {
        "raw": "*first italics*",
        "tokens": [
          {
            "raw": "first italics",
            "type": "text",
            "value": "first italics",
          },
        ],
        "type": "italic",
      },
      {
        "raw": " ",
        "type": "text",
        "value": " ",
      },
      {
        "raw": "*second italics*",
        "tokens": [
          {
            "raw": "second italics",
            "type": "text",
            "value": "second italics",
          },
        ],
        "type": "italic",
      },
      {
        "raw": " ",
        "type": "text",
        "value": " ",
      },
      {
        "raw": "*third italics*",
        "tokens": [
          {
            "raw": "third italics",
            "type": "text",
            "value": "third italics",
          },
        ],
        "type": "italic",
      },
    ],
    "type": "paragraph",
    "value": "*first italics* *second italics* *third italics*",
  },
]
`;

exports[`emphasis link should deep tokenized the link title 1`] = `
[
  {
    "indent": 0,
    "raw": "[*italic* with **bold** and \`code\`](https://kiranparajuli.com.np)",
    "tokens": [
      {
        "raw": "[*italic* with **bold** and \`code\`](https://kiranparajuli.com.np)",
        "tokens": {
          "href": "https://kiranparajuli.com.np",
          "title": {
            "raw": "*italic* with **bold** and \`code\`",
            "tokens": [
              {
                "raw": "*italic*",
                "tokens": [
                  {
                    "raw": "italic",
                    "type": "text",
                    "value": "italic",
                  },
                ],
                "type": "italic",
              },
              {
                "raw": " with ",
                "type": "text",
                "value": " with ",
              },
              {
                "raw": "**bold**",
                "tokens": [
                  {
                    "raw": "bold",
                    "type": "text",
                    "value": "bold",
                  },
                ],
                "type": "bold",
              },
              {
                "raw": " and ",
                "type": "text",
                "value": " and ",
              },
              {
                "raw": "\`code\`",
                "type": "code",
                "value": "code",
              },
            ],
          },
          "tooltip": undefined,
        },
        "type": "link",
      },
    ],
    "type": "paragraph",
    "value": "[*italic* with **bold** and \`code\`](https://kiranparajuli.com.np)",
  },
]
`;

exports[`emphasis link should match the consecutive occurrences 1`] = `
[
  {
    "indent": 0,
    "raw": "[link](https://kiranparajuli.com.np) [link](https://kiranparajuli.com.np)",
    "tokens": [
      {
        "raw": "[link](https://kiranparajuli.com.np)",
        "tokens": {
          "href": "https://kiranparajuli.com.np",
          "title": {
            "raw": "link",
            "tokens": [
              {
                "raw": "link",
                "type": "text",
                "value": "link",
              },
            ],
          },
          "tooltip": undefined,
        },
        "type": "link",
      },
      {
        "raw": " ",
        "type": "text",
        "value": " ",
      },
      {
        "raw": "[link](https://kiranparajuli.com.np)",
        "tokens": {
          "href": "https://kiranparajuli.com.np",
          "title": {
            "raw": "link",
            "tokens": [
              {
                "raw": "link",
                "type": "text",
                "value": "link",
              },
            ],
          },
          "tooltip": undefined,
        },
        "type": "link",
      },
    ],
    "type": "paragraph",
    "value": "[link](https://kiranparajuli.com.np) [link](https://kiranparajuli.com.np)",
  },
]
`;

exports[`emphasis strikes should be deep tokenized 1`] = `
[
  {
    "indent": 0,
    "raw": "~~strikes with ~ gem and \`code\` and **bold** and *italics* and [link](https://kiranparajuli.com.np)~~",
    "tokens": [
      {
        "raw": "~~strikes with ~ gem and \`code\` and **bold** and *italics* and [link](https://kiranparajuli.com.np)~~",
        "tokens": [
          {
            "raw": "strikes with ~ gem and ",
            "type": "text",
            "value": "strikes with ~ gem and ",
          },
          {
            "raw": "\`code\`",
            "type": "code",
            "value": "code",
          },
          {
            "raw": " and ",
            "type": "text",
            "value": " and ",
          },
          {
            "raw": "**bold**",
            "tokens": [
              {
                "raw": "bold",
                "type": "text",
                "value": "bold",
              },
            ],
            "type": "bold",
          },
          {
            "raw": " and ",
            "type": "text",
            "value": " and ",
          },
          {
            "raw": "*italics*",
            "tokens": [
              {
                "raw": "italics",
                "type": "text",
                "value": "italics",
              },
            ],
            "type": "italic",
          },
          {
            "raw": " and ",
            "type": "text",
            "value": " and ",
          },
          {
            "raw": "[link](https://kiranparajuli.com.np)",
            "tokens": {
              "href": "https://kiranparajuli.com.np",
              "title": {
                "raw": "link",
                "tokens": [
                  {
                    "raw": "link",
                    "type": "text",
                    "value": "link",
                  },
                ],
              },
              "tooltip": undefined,
            },
            "type": "link",
          },
        ],
        "type": "strike-through",
      },
    ],
    "type": "paragraph",
    "value": "~~strikes with ~ gem and \`code\` and **bold** and *italics* and [link](https://kiranparajuli.com.np)~~",
  },
]
`;

exports[`emphasis strikes should match the consecutive occurrences 1`] = `
[
  {
    "indent": 0,
    "raw": "~~first strikes~~ ~~second strikes~~ ~~third strikes~~",
    "tokens": [
      {
        "raw": "~~first strikes~~",
        "tokens": [
          {
            "raw": "first strikes",
            "type": "text",
            "value": "first strikes",
          },
        ],
        "type": "strike-through",
      },
      {
        "raw": " ",
        "type": "text",
        "value": " ",
      },
      {
        "raw": "~~second strikes~~",
        "tokens": [
          {
            "raw": "second strikes",
            "type": "text",
            "value": "second strikes",
          },
        ],
        "type": "strike-through",
      },
      {
        "raw": " ",
        "type": "text",
        "value": " ",
      },
      {
        "raw": "~~third strikes~~",
        "tokens": [
          {
            "raw": "third strikes",
            "type": "text",
            "value": "third strikes",
          },
        ],
        "type": "strike-through",
      },
    ],
    "type": "paragraph",
    "value": "~~first strikes~~ ~~second strikes~~ ~~third strikes~~",
  },
]
`;
